--- a/FXExperienceTools/src/main/resources/styles/main_light.css
+++ b/FXExperienceTools/src/main/resources/styles/main_light.css
@@ -6,10 +6,6 @@ an express grant of patent rights. However, a larger work using the licensed wor
 through interfaces provided by the licensed work may be distributed under
 different terms and without source code for the larger work.
 */
-/*
-    Created on : May 8, 2017, 12:05:37 AM
-    Author     : Eric Canull
-*/
 .root {
     -fe-header-background: #00466B;
     -fe-body-background: #F1F4F6;
@@ -25,7 +21,7 @@ different terms and without source code for the larger work.
 }
 .nav-box {
     -fx-background-image: url("../images/binding_dark.png");
-    -fx-effect: innershadow( three-pass-box , rgba(32,32, 32,0.5) ,60, 0.0 , 0 , 0 );
+    -fx-effect: innershadow(three-pass-box, rgba(32,32, 32,0.5) ,60, 0.0 , 0 , 0 );
     /*    -fx-background-color:  -fe-dark-inner-background;*/
     -fx-background-insets: 1, -5, 1, -5;
     -fx-background-radius: 9;
@@ -38,7 +34,7 @@ different terms and without source code for the larger work.
 }
 .status-label {
     -fx-text-fill: black;
-    -fx-font-family: sans-serif;
+    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
     -fx-font: 1em bold;
 }
 /*******************************************************************************
@@ -56,17 +52,17 @@ different terms and without source code for the larger work.
 .menu-button .menu:hover {
     -fx-text-fill: -fe-header-text;
     -fx-background-color: derive(-fe-header-background, 26%);
-
+}
+.main-menu .container .menu:openvertically .label .text {
+    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
 }
 .main-menu {
-    /*    -fx-background-color:  derive(rgb(147, 147, 147), -60%);*/
     -fx-background-color: -fe-header-background;
     -fx-background-insets: 0 0 -1 0, 0, 1 0 0 0, 2 0 0 0;
     -fx-padding: 0.385em 0.692em 0.231em 0.692em;
     -fx-font-size: 0.875em;
     -fx-alignment: center-left;
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.2), 5, 0.0, 0, 1 );
-
 
     /* Nothing more needed for Mac OS X than the following property!
      * All other definitions kept from caspian, to ensure, that MenuBar
@@ -78,7 +74,7 @@ different terms and without source code for the larger work.
 .menu-item:focused,
 .menu-item:hover{
     -fx-background-color: derive(-fe-header-background, 26%);
-    /*       -fx-background-insets: 1, 1, 1;*/
+    /*-fx-background-insets: 1, 1, 1;*/
 }
 
 .menu-button .menu {
@@ -95,7 +91,11 @@ different terms and without source code for the larger work.
 
 .context-menu {
     -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
-    -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), -fe-header-background;
+    -fx-background-color: derive(rgb(147, 147, 147), -60%),
+                          derive(rgb(147, 147, 147), -60%),
+                          derive(rgb(147, 147, 147), 40%),
+                          -fe-header-background;
+
     /*    -fx-background-insets: 0, 1, 2;*/
 
     /*    -fx-padding: 0.666667em 0.083333em 0.666667em 0.083333em;  8 1 8 1 */
@@ -141,7 +141,7 @@ different terms and without source code for the larger work.
 
 .big-button {
     -fx-text-fill: white;
-    -fx-font-family: "Arial Narrow";
+    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
     -fx-font-weight: bold;
     -fx-background-color: linear-gradient(#61a2b1, #2A5058);
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
